--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 .nav{
     width: 100%;
     height: 50px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     font-size: 25px;
     display: flex;
     /* align-items: center; */
@@ -17,7 +17,7 @@ body{
 .inst{
     width: 30%;
     height: 50px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -25,7 +25,7 @@ body{
 .icon{
     width: 70%;
     height: 50px;
-    border: 1px solid rgb(209, 247, 14);
+    /* border: 1px solid rgb(209, 247, 14); */
  display: flex;
  justify-content: end;
 align-items: center;
@@ -34,7 +34,7 @@ align-items: center;
 .ul{
     width: 50%;
     height: 50px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     list-style: none;
     display: flex;
     font-size: 35px;
@@ -50,7 +50,7 @@ align-items: center;
  align-items: center;
     overflow: hidden;
     overflow-x: auto;
-
+   
   
 }
 .round_up{
@@ -85,7 +85,7 @@ background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4); /* W3C, IE 10+
 .footer{
     width: 100%;
     height: 60px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
    
         position: absolute;
@@ -94,7 +94,7 @@ background: linear-gradient(to right, #fcb045, #fd1d1d, #833ab4); /* W3C, IE 10+
 .fot_div{
     width: 20%;
     height: 60px;
-    border: 1px solid black; 
+    /* border: 1px solid black;  */
 display: flex;
 justify-content: center;
 align-items: center;
@@ -102,14 +102,23 @@ align-items: center;
 .om{
     width: 100%;
     height: 310px;
-    border: 1px solid black; 
+    /* border: 1px solid black;  */
     overflow: scroll;
 }
 .aman{
     width: 100%;
-    height: 600px;
-    border: 1px solid blue;
-    background-color: #fcb045;
+    height: 700px;
+    margin-top: 20px;
+    /* border: 1px solid blue; */
+    /* background-color: #fcb045; */
+}
+.comat{
+    width: 100%;
+    height: 100px;
+    /* border: 1px solid rgb(99, 241, 11); */
+}
+p{
+    font-size: 17px;
 }
 .chap{
     width: 20px;
@@ -119,6 +128,70 @@ align-items: center;
 }
 .img{
     width: 100%;
-    height: 30px;
-    border: 1px solid blueviolet;
+    height: 50px;
+    /* border: 1px solid blueviolet; */
+display: flex;
+align-items: center;
+justify-content: space-between;
+}
+.img_2{
+    width: 12%;
+    height: 40px;
+    /* border: 1px solid blueviolet; */
+border-radius: 20px;
+}
+.img_2 img{
+    border-radius: 50px;
+}
+.text{
+    width: 84%;
+    height: 40px;
+    /* border: 1px solid blueviolet; */
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+}
+.post{
+    width: 100%;
+    height: 500px;
+    /* border: 1px solid red; */
+ 
+}
+.post_fot{
+    width: 100%;
+    height: 50px;
+    /* border: 1px solid rgb(22, 2, 2); */
+display: flex;
+justify-content: space-between;
+}
+.pf_1{
+    width: 70%;
+    height: 48px;
+    /* border: 1px solid rgb(26, 13, 102); */
+display: flex;
+
+}
+.icon_3{
+    width: 25%;
+    height: 48px;
+    /* border:1px 
+     solid #0a6966; */
+     display: flex;
+     /* justify-content: center; */
+     align-items: center;
+}
+.pf_2{
+    width: 20%;
+    height: 48px;
+    /* border: 1px solid rgb(2, 1, 3); */
+display: flex;
+align-items: center;
+
+}
+
+.footer span{
+    font-size: 30px;
+}
+.post_fot span{
+    font-size: 30px;
 }
